<resources>
    <string name="app_name">mpktarnow</string>
    <string name="title_home">Home</string>
    <string name="title_near">Blisko</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bus_stop_details">Bus Stop Details</string>
    <string name="title_map">Map</string>
    
    <string name="current_delay">Aktualne opóźnienie</string>
    <string name="current_acceleration">Aktualne przyśpieszenie</string>

    <string name="error_download_shedule">Wystąpił błąd podczas pobierania najbliższych odjazdów z przystanku</string>
    <string name="you_are_here">Tutaj jesteś</string>
    <string name="departue">Odjazd</string>
    <string name="arrival">Przyjazd</string>
    <string name="meters">metrów</string>
    <string name="to_your_destination">do Twojego celu</string>
    <string name="to">do</string>
</resources>
