<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.softarea.mpktarnow.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.softarea.mpktarnow.ui.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.softarea.mpktarnow.ui.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_bus_stop_details"
        android:name="com.softarea.mpktarnow.ui.BusStopDetailsFragment"
        android:label="@string/title_bus_stop_details"
        tools:layout="@layout/fragment_bus_stop_details" />

    <fragment
        android:id="@+id/navigation_near"
        android:name="com.softarea.mpktarnow.ui.NearFragment"
        android:label="@string/title_near"
        tools:layout="@layout/fragment_near" />

    <fragment
        android:id="@+id/navigation_busstop_list_map"
        android:name="com.softarea.mpktarnow.ui.map.BusStopListMapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_bus_details_map"
        android:name="com.softarea.mpktarnow.ui.map.BusDetailsMapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_get_coords_map"
        android:name="com.softarea.mpktarnow.ui.map.GetCoordsMapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_search_connection_map"
        android:name="com.softarea.mpktarnow.ui.map.SearchConnectionMapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

</navigation>
